--- a/Cvitrest.html
+++ b/Cvitrest.html
@@ -156,7 +156,7 @@
     </div>
 
     <div class="right">
-      <img src="/mnt/data/photo.jpg" class="photo">
+      <img src="./photo.jpg" class="photo">
     </div>
   </div>
 
