Update title in Cvitrest.html

--- a/Cvitrest.html
+++ b/Cvitrest.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
 <meta charset="utf-8">
-<title>Curriculum Vitae – Kensu Miliante</title>
+<title>Curriculum Vitae – Kensu Miliante Araujo</title>
 <style>
   body {
     margin: 0;
