Update name in Cvitrest.html

--- a/Cvitrest.html
+++ b/Cvitrest.html
@@ -81,7 +81,7 @@
 
   <div class="layout">
     <div class="left">
-      <div class="name">KENSU MILIANTE</div>
+      <div class="name">KENSU MILIANTE ARAUJO</div>
       <div class="contact">
         Pontevedra, Galizia – Spagna<br>
         Telefono: 637 636 584 · Email: kensumiliante@gmx.com
